Initial project layout.

--- a/uasdm-server/src/main/resources/runwaysdk/server.properties
+++ b/uasdm-server/src/main/resources/runwaysdk/server.properties
@@ -63,9 +63,9 @@ database.port=5442
 
 # RUNWAY will create a user with these properties and will use it to
 # modify database records
-database.user=georegistry
-database.password=f$wdT6E3a#
-database.name=georegistry
+database.user=uasdm
+database.password=T9r2LaR
+database.name=uasdm
 database.namespace=
 
 # Connection pooling properties
