--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <description>Unmanned Aerial Surveilance Data Management</description>
 
   <modules>
-    <module>../uasdm</module>
+    <module>../geoprism</module>
     <module>uasdm-server</module>
     <module>uasdm-web</module>
   </modules>
@@ -35,6 +35,15 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <repositories>
+    <repository>
+      <id>terraframe</id>
+      <name>terraframe</name>
+      <url>http://nexus.terraframe.com/content/groups/allrepos</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
 
   <distributionManagement>
     <repository>
