--- a/uasdm-server/src/main/resources/geoprism/geoserver.properties
+++ b/uasdm-server/src/main/resources/geoprism/geoserver.properties
@@ -2,8 +2,8 @@ admin.user=admin
 admin.password=_nm8P4gfdWxGqNRQ#8
 geoserver.remote.path=https://127.0.0.1:8443/geoserver
 geoserver.local.path=https://127.0.0.1:8443/geoserver
-geoserver.workspace=georegistry
-geoserver.store=georegistry
+geoserver.workspace=uasdm
+geoserver.store=uasdm
 geoserver.keystore.path=/usr/lib/jvm/java-8-oracle/jre/lib/security/cacerts
 geoserver.keystore.pass=changeit
 
