--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@denversouthedp/dsedp",
+  "name": "@uasdm/uasdm",
   "version": "0.1.0",
   "scripts": {
     "start": "webpack-dev-server --https --inline --progress --port 8080",
@@ -16,12 +16,8 @@
     "@angular/platform-browser": "~5.2.1",
     "@angular/platform-browser-dynamic": "~5.2.1",
     "@angular/router": "~5.2.1",
-    "@terraframe/core": "^0.1.1",
     "core-js": "^2.4.1",
-    "ng2-file-upload": "^1.3.0",
-    "ng2-pdf-viewer": "^5.1.0",
     "ngx-bootstrap": "^2.0.2",
-    "ngx-owl-carousel": "^2.0.7",
     "rxjs": "5.5.0",
     "zone.js": "^0.8.5"
   },
