--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "~5.2.1",
     "@angular/platform-browser-dynamic": "~5.2.1",
     "@angular/router": "~5.2.1",
+    "angular-tree-component": "^8.0.0",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^2.0.2",
     "rxjs": "5.5.0",
@@ -33,17 +34,11 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.2.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.1",
+    "node-sass": "^4.9.4",
     "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.13.1",
     "typescript": "~2.4.2",
     "uglify-js": "^3.3.11",
