--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -19,6 +19,7 @@
     "angular-tree-component": "^8.0.0",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^2.0.2",
+    "ngx-contextmenu": "^4.2.0",
     "rxjs": "5.5.0",
     "zone.js": "^0.8.5"
   },
