--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@angular/animations": "~5.2.1",
-    "@angular/cdk": "~5.2.1",
+    "@angular/cdk": "^5.2.5",
     "@angular/common": "~5.2.1",
     "@angular/core": "~5.2.1",
     "@angular/forms": "~5.2.1",
@@ -19,6 +19,7 @@
     "angular-tree-component": "^8.0.0",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^2.0.2",
+    "ngx-contextmenu": "^5.1.1",
     "rxjs": "5.5.0",
     "zone.js": "^0.8.5"
   },
