--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -20,6 +20,7 @@
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^2.0.2",
     "ngx-contextmenu": "^4.2.0",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "5.5.0",
     "zone.js": "^0.8.5"
   },
