IMplementing metadata file check

--- a/uasdm-server/src/main/resources/runwaysdk/server.properties
+++ b/uasdm-server/src/main/resources/runwaysdk/server.properties
@@ -63,9 +63,9 @@ database.port=5432
 
 # RUNWAY will create a user with these properties and will use it to
 # modify database records
-database.user=geoprism
-database.password=geoprism
-database.name=geoprism
+database.user=uasdm
+database.password=T9r2LaR
+database.name=uasdm
 database.namespace=
 
 # Connection pooling properties
