Updated app properties for deploy, build of ng2 source

--- a/uasdm-server/src/main/resources/app.properties
+++ b/uasdm-server/src/main/resources/app.properties
@@ -1,10 +1,10 @@
 # Directory used by the servlet to store the temp file items
-temp.dir=C:/Users/admin/git/osmre-uav/uasdm-server/files/temp
+temp.dir=WEB-INF/files/temp
 
 # Directory used to store chunks
-upload.dir=C:/Users/admin/git/osmre-uav/uasdm-server/files/upload
+upload.dir=WEB-INF/files/upload
 
-# Number of days before a chunk expires
+# Number of days before a chunk expires, make sure this value is in sync with the fine uploader property defined in upload.component.ts
 chunk.expire.time=1
 
 # Bucket to use when uploading to s3
