--- a/uasdm-server/src/main/resources/app.properties
+++ b/uasdm-server/src/main/resources/app.properties
@@ -8,5 +8,5 @@ upload.dir=WEB-INF/files/upload
 chunk.expire.time=1
 
 # Bucket to use when uploading to s3
-#bucket.name=osmre-uas-repo
-bucket.name=osmre-uas-test
+bucket.name=osmre-uas-repo
+#bucket.name=osmre-uas-test
