--- a/uasdm-server/src/main/resources/uasdm/app.properties
+++ b/uasdm-server/src/main/resources/uasdm/app.properties
@@ -9,4 +9,4 @@ chunk.expire.time=1
 
 # Bucket to use when uploading to s3
 #bucket.name=osmre-uas-repo
-bucket.name=osmre-uas-test
+bucket.name=osmre-uas-dev
