--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -16,8 +16,10 @@
     "@angular/platform-browser": "~5.2.1",
     "@angular/platform-browser-dynamic": "~5.2.1",
     "@angular/router": "~5.2.1",
+    "@types/file-saver": "^2.0.0",
     "angular-tree-component": "^8.0.0",
     "core-js": "^2.4.1",
+    "file-saver": "^2.0.0",
     "fine-uploader": "^5.16.2",
     "ngx-bootstrap": "^2.0.2",
     "ngx-contextmenu": "^4.2.0",
