--- a/uasdm-server/src/main/resources/uasdm/app.properties
+++ b/uasdm-server/src/main/resources/uasdm/app.properties
@@ -10,3 +10,6 @@ chunk.expire.time=1
 # Bucket to use when uploading to s3
 #bucket.name=osmre-uas-repo
 bucket.name=osmre-uas-dev
+
+# url of the solr service
+solr.url=http://localhost:8983/solr/uasdm
