--- a/uasdm-server/src/main/resources/uasdm/app.properties
+++ b/uasdm-server/src/main/resources/uasdm/app.properties
@@ -12,4 +12,7 @@ chunk.expire.time=1
 bucket.name=osmre-uas-dev
 
 # url of the solr service
+solr.enabled=false
+
+# url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
