Simplified development environment and extracted properties files into envcfg/appcfg.

--- a/envcfg/dev/runwaysdk/server.properties
+++ b/envcfg/dev/runwaysdk/server.properties
@@ -64,7 +64,7 @@ database.port=5432
 # RUNWAY will create a user with these properties and will use it to
 # modify database records
 database.user=uasdm
-database.password=T9r2LaR
+database.password=uasdm
 database.name=uasdm
 database.namespace=
 
