Basic mapping support

--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -16,11 +16,16 @@
     "@angular/platform-browser": "~5.2.1",
     "@angular/platform-browser-dynamic": "~5.2.1",
     "@angular/router": "~5.2.1",
+    "@mapbox/mapbox-gl-draw": "^1.1.1",
     "@types/file-saver": "^2.0.0",
+    "@types/geojson": "^7946.0.7",
+    "@types/mapbox-gl": "0.51.3",
     "angular-tree-component": "^8.0.0",
     "core-js": "^2.4.1",
     "file-saver": "^2.0.0",
     "fine-uploader": "^5.16.2",
+    "mapbox-gl": "0.53.1",
+    "mapbox-gl-draw": "^0.16.0",
     "ngx-bootstrap": "^2.0.2",
     "ngx-contextmenu": "^4.2.0",
     "ngx-cookie-service": "^1.0.10",
