--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -17,10 +17,11 @@
     "@angular/platform-browser-dynamic": "~5.2.1",
     "@angular/router": "~5.2.1",
     "@mapbox/mapbox-gl-draw": "^1.1.1",
+    "@mapbox/mapbox-gl-draw-static-mode": "^1.0.1",
     "@types/file-saver": "^2.0.0",
     "@types/geojson": "^7946.0.7",
     "@types/mapbox-gl": "0.51.3",
-    "angular-tree-component": "^8.0.0",
+    "angular-tree-component": "^8.3.0",
     "core-js": "^2.4.1",
     "file-saver": "^2.0.0",
     "fine-uploader": "^5.16.2",
