--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -1,59 +1,59 @@
 {
-  "name": "@uasdm/uasdm",
-  "version": "0.1.0",
-  "scripts": {
-    "start": "webpack-dev-server --https --inline --progress --port 8080",
-    "test": "karma start",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --profile"
-  },
-  "dependencies": {
-    "@angular/animations": "~5.2.1",
-    "@angular/cdk": "^5.2.5",
-    "@angular/common": "~5.2.1",
-    "@angular/core": "~5.2.1",
-    "@angular/forms": "~5.2.1",
-    "@angular/http": "~5.2.1",
-    "@angular/platform-browser": "~5.2.1",
-    "@angular/platform-browser-dynamic": "~5.2.1",
-    "@angular/router": "~5.2.1",
-    "@mapbox/mapbox-gl-draw": "^1.1.1",
-    "@mapbox/mapbox-gl-draw-static-mode": "^1.0.1",
-    "@types/file-saver": "^2.0.0",
-    "@types/geojson": "^7946.0.7",
-    "@types/mapbox-gl": "0.51.3",
-    "angular-tree-component": "^8.3.0",
-    "core-js": "^2.4.1",
-    "file-saver": "^2.0.0",
-    "fine-uploader": "^5.16.2",
-    "mapbox-gl": "0.53.1",
-    "ngx-bootstrap": "^2.0.2",
-    "ngx-contextmenu": "^4.2.0",
-    "ngx-cookie-service": "^1.0.10",
-    "rxjs": "5.5.0",
-    "zone.js": "^0.8.5"
-  },
-  "devDependencies": {
-    "@angular/compiler": "~5.2.1",
-    "@angular/compiler-cli": "~5.2.1",
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.45",
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^3.0.4",
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.5",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.16.1",
-    "node-sass": "^4.9.4",
-    "null-loader": "^0.1.1",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.13.1",
-    "typescript": "~2.4.2",
-    "uglify-js": "^3.3.11",
-    "webpack": "^2.4.0",
-    "webpack-dev-server": "2.4.1",
-    "webpack-merge": "^3.0.0"
-  }
+	"name": "@uasdm/uasdm",
+	"version": "0.1.0",
+	"scripts": {
+		"start": "webpack-dev-server --https --inline --progress --port 8080",
+		"test": "karma start",
+		"build": "rimraf dist && webpack --config config/webpack.prod.js --profile"
+	},
+	"dependencies": {
+		"@angular/animations": "~5.2.11",
+		"@angular/cdk": "^5.2.5",
+		"@angular/common": "~5.2.11",
+		"@angular/core": "~5.2.11",
+		"@angular/forms": "~5.2.11",
+		"@angular/http": "~5.2.11",
+		"@angular/platform-browser": "~5.2.11",
+		"@angular/platform-browser-dynamic": "~5.2.11",
+		"@angular/router": "~5.2.11",
+		"@mapbox/mapbox-gl-draw": "^1.1.1",
+		"@mapbox/mapbox-gl-draw-static-mode": "^1.0.1",
+		"@types/file-saver": "^2.0.0",
+		"@types/geojson": "^7946.0.7",
+		"@types/mapbox-gl": "0.51.3",
+		"angular-tree-component": "^8.3.0",
+		"core-js": "^2.4.1",
+		"file-saver": "^2.0.0",
+		"fine-uploader": "^5.16.2",
+		"mapbox-gl": "0.53.1",
+		"ngx-bootstrap": "^2.0.2",
+		"ngx-contextmenu": "^4.2.0",
+		"ngx-cookie-service": "^1.0.10",
+		"rxjs": "5.5.0",
+		"web-animations-js": "^2.3.1",
+		"zone.js": "^0.8.5"
+	},
+	"devDependencies": {
+		"@angular/compiler": "~5.2.11",
+		"@angular/compiler-cli": "~5.2.11",
+		"@ngtools/webpack": "^7.3.7",
+		"@types/jasmine": "2.5.36",
+		"@types/node": "^6.0.45",
+		"css-loader": "2.1.1",
+		"file-loader": "1.1.11",
+		"html-loader": "^0.5.5",
+		"html-webpack-plugin": "^4.0.0-beta.5",
+		"node-sass": "^4.9.4",
+		"null-loader": "^0.1.1",
+		"raw-loader": "^0.5.1",
+		"rimraf": "^2.5.2",
+		"sass-loader": "^7.1.0",
+		"style-loader": "^0.13.1",
+		"typescript": "^2.8.1",
+		"webpack": "^4.28.3",
+		"webpack-bundle-analyzer": "^3.1.0",
+		"webpack-cli": "3.2.0",
+		"webpack-dev-server": "^3.1.14",
+		"webpack-merge": "^3.0.0"
+	}
 }
