--- a/uasdm-web/src/main/ng2/tsconfig.json
+++ b/uasdm-web/src/main/ng2/tsconfig.json
@@ -1,19 +1,20 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": ["es2015", "dom"],
-    "noImplicitAny": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "skipLibCheck": true
-  },
-  "exclude": [
-    "node_modules/*",
-    "aot/*",
-    "app/*-aot.ts"
-  ]
+	"compilerOptions": {
+		"target": "es5",
+		"module": "commonjs",
+		"moduleResolution": "node",
+		"sourceMap": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"lib": [
+			"es2015",
+			"dom"
+		],
+		"noImplicitAny": false,
+		"suppressImplicitAnyIndexErrors": true,
+		"skipLibCheck": true
+	},
+	"exclude": [
+		"node_modules/*"
+	]
 }
