Revert "Updated S3 credentials."
This reverts commit 94926ee915d20a33c318816e5994f73ccefe961d.

--- a/uasdm-server/src/main/resources/AwsCredentials.properties
+++ b/uasdm-server/src/main/resources/AwsCredentials.properties
@@ -1,4 +1,8 @@
+#User Name,Access Key Id,Secret Access Key
+#"geoprism",AKIAI5CJ66TI7GYOAIVQ,8IGoWINw6QsZBfOWT2mTdHqytzE0FbT7bdpKVexw
+#accessKey=AKIAI5CJ66TI7GYOAIVQ
+#secretKey=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
 
-# Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
-accessKey=AKIAIUOLICSECPXGYTAA
-secretKey=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
+accessKey=AKIAJ3EWOJETB42FRHCQ
+secretKey=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
+
