--- a/uasdm-server/src/main/resources/AwsCredentials.properties
+++ b/uasdm-server/src/main/resources/AwsCredentials.properties
@@ -1,7 +1,4 @@
-#User Name,Access Key Id,Secret Access Key
-#"geoprism",AKIAI5CJ66TI7GYOAIVQ,8IGoWINw6QsZBfOWT2mTdHqytzE0FbT7bdpKVexw
-#accessKey=AKIAI5CJ66TI7GYOAIVQ
-#secretKey=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
 
+# Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
 accessKey=AKIAIUOLICSECPXGYTAA
 secretKey=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
