--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -26,8 +26,13 @@
 	  <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.8</version>
+      <version>4.3.6</version>
     </dependency>
+	  <dependency>
+	    <groupId>net.lingala.zip4j</groupId>
+	    <artifactId>zip4j</artifactId>
+	    <version>1.3.2</version>
+		</dependency>
 		<dependency>
 			<groupId>net.geoprism</groupId>
 			<artifactId>geoprism-server</artifactId>
