--- a/uasdm-web/pom.xml
+++ b/uasdm-web/pom.xml
@@ -12,7 +12,7 @@
   <name>UASDM Web</name>
 
   <properties>
-    <geoserver.version>2.9.1</geoserver.version>
+    <geoserver.version>2.14.2</geoserver.version>
     <local.host>$${pageContext.request.contextPath}</local.host>    
   </properties>
 
@@ -89,6 +89,8 @@
                     -Djavax.net.ssl.trustStorePassword=2v8hVW2rPFncN6m
                     -Djava.rmi.server.hostname=127.0.0.1
                     -Dbirt-server=true
+                    -Daws.accessKeyId=AKIAIUOLICSECPXGYTAA
+                    -Daws.secretKey=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
                     -Denvcfg=${project.basedir}/../envcfg
                   </cargo.jvmargs>
                 </properties>
