--- a/envcfg/dev/uasdm/app.properties
+++ b/envcfg/dev/uasdm/app.properties
@@ -9,7 +9,7 @@ chunk.expire.time=1
 
 # Bucket to use when uploading to s3
 #bucket.name=osmre-uas-repo
-bucket.name=osmre-uas-dev-deploy
+bucket.name=osmre-uas-dev
 bucket.region=US_EAST_1
 
 # url of the solr service
