NPS aws credentials.

--- a/uasdm-server/src/main/resources/AwsCredentials.properties
+++ b/uasdm-server/src/main/resources/AwsCredentials.properties
@@ -1,4 +1,4 @@
 
-# Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
-accessKey=AKIAIUOLICSECPXGYTAA
-secretKey=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
+# NPS S3 CREDENTIALS for user nps-geoprism-staging-bucket-programmatic-access
+accessKey=AKIASX6YNNQV4G3YGK5I
+secretKey=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
