Added deployment type to properties.

--- a/envcfg/nps-dev/uasdm/app.properties
+++ b/envcfg/nps-dev/uasdm/app.properties
@@ -8,7 +8,8 @@ upload.dir=WEB-INF/files/upload
 chunk.expire.time=1
 
 # Bucket to use when uploading to s3
-bucket.name=osmre-uas-dev-deploy
+#bucket.name=osmre-uas-repo
+bucket.name=osmre-uas-dev
 bucket.region=US_EAST_1
 
 # url of the solr service
@@ -17,6 +18,6 @@ solr.enabled=true
 # url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
 
-odm.url=http://10.120.10.50:3000/
+odm.url=http://localhost:3000/
 
-deployment.type=osmre
+deployment.type=nps
