OSMRE / NPS properties file refactor.

--- a/envcfg/staging/uasdm/app.properties
+++ b/envcfg/staging/uasdm/app.properties
@@ -7,7 +7,8 @@ upload.dir=WEB-INF/files/upload
 # Number of days before a chunk expires, make sure this value is in sync with the fine uploader property defined in upload.component.ts
 chunk.expire.time=1
 
-# Bucket to use when uploading to s3
+s3.accessKey=AKIAIUOLICSECPXGYTAA
+s3.secretKey=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
 bucket.name=osmre-uas-staging
 bucket.region=US_EAST_1
 
