--- a/envcfg/nps-staging/uasdm/app.properties
+++ b/envcfg/nps-staging/uasdm/app.properties
@@ -7,7 +7,9 @@ upload.dir=WEB-INF/files/upload
 # Number of days before a chunk expires, make sure this value is in sync with the fine uploader property defined in upload.component.ts
 chunk.expire.time=1
 
-# Bucket to use when uploading to s3
+# Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
+accessKey=AKIASX6YNNQV4G3YGK5I
+secretKey=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
 bucket.name=nps-geoprism-staging-bucket
 bucket.region=US_EAST_1
 
