--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -25,18 +25,18 @@
 		"core-js": "^2.4.1",
 		"file-saver": "^2.0.0",
 		"fine-uploader": "^5.16.2",
+		"libphonenumber-js": "^1.7.18",
 		"mapbox-gl": "0.53.1",
+		"ng2-file-upload": "^1.3.0",
+		"ng2-password-strength-bar": "^1.2.3",
+		"ng2-validation": "^4.2.0",
 		"ngx-bootstrap": "^2.0.2",
 		"ngx-contextmenu": "^4.2.0",
 		"ngx-cookie-service": "^1.0.10",
+		"ngx-pagination": "^3.2.1",
 		"rxjs": "5.5.0",
 		"web-animations-js": "^2.3.1",
-		"zone.js": "^0.8.5",
-		"libphonenumber-js": "^1.5.2",
-		"ng2-file-upload": "^1.3.0",
-		"ng2-password-strength-bar": "^1.1.3",
-		"ng2-validation": "^4.2.0",
-		"ngx-pagination": "^3.0.3"
+		"zone.js": "^0.8.5"
 	},
 	"devDependencies": {
 		"@angular/compiler": "~5.2.11",
