--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <aspectj.version>1.8.6</aspectj.version>
     <aspectj.plugin.version>1.7</aspectj.plugin.version>
 
-    <geoprism.version>1.02.0001-SNAPSHOT</geoprism.version>
+    <geoprism.version>[0,)</geoprism.version>
     <geotools.version>16.1</geotools.version>    
   </properties>
 
