show coordinates when moving cursor over map

--- a/uasdm-web/src/main/ng2/tsconfig.json
+++ b/uasdm-web/src/main/ng2/tsconfig.json
@@ -12,7 +12,8 @@
 		],
 		"noImplicitAny": false,
 		"suppressImplicitAnyIndexErrors": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"allowSyntheticDefaultImports": true
 	},
 	"exclude": [
 		"node_modules/*"
