--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -21,6 +21,7 @@
 		"@types/file-saver": "^2.0.0",
 		"@types/geojson": "^7946.0.7",
 		"@types/mapbox-gl": "0.51.3",
+		"@types/proj4": "^2.5.0",
 		"angular-tree-component": "^8.3.0",
 		"core-js": "^2.4.1",
 		"file-saver": "^2.0.0",
@@ -34,6 +35,7 @@
 		"ngx-contextmenu": "^4.2.0",
 		"ngx-cookie-service": "^1.0.10",
 		"ngx-pagination": "^3.2.1",
+		"proj4": "^2.5.0",
 		"rxjs": "5.5.0",
 		"web-animations-js": "^2.3.1",
 		"zone.js": "^0.8.5"
