--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   </modules>
 
   <properties>
-    <geoprism.version>0.5.0</geoprism.version>
+    <geoprism.version>0.5.1-SNAPSHOT</geoprism.version>
   
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
