Fixed issues with vault and added new geoprism file storage property.

--- a/uasdm-web/pom.xml
+++ b/uasdm-web/pom.xml
@@ -92,6 +92,7 @@
                     -Daws.accessKeyId=AKIAIUOLICSECPXGYTAA
                     -Daws.secretKey=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
                     -Denvcfg=${project.basedir}/../envcfg
+                    -Dproject.basedir=${project.basedir}
                   </cargo.jvmargs>
                 </properties>
               </configuration>
