--- a/uasdm-web/src/main/resources/jawr.properties
+++ b/uasdm-web/src/main/resources/jawr.properties
@@ -25,7 +25,7 @@ jawr.css.bundle.userdashboards.id=/bundles/user-dashboards.css
 jawr.css.bundle.userdashboards.mappings=/net/geoprism/css/main.css, /net/geoprism/css/user-dashboards.css, /net/geoprism/css/data-uploader.css, /net/geoprism/custom-fonts/uploader/fonts/custom-font-styles.css
 
 jawr.css.bundle.main.id=/bundles/main.css
-jawr.css.bundle.main.mappings=/3rd-party/bootstrap-3.3.7/css/bootstrap.min.css, /3rd-party/jquery/ui/themes/lightness.css, /net/geoprism/css/theme.css, /net/geoprism/css/main.css, /3rd-party/jquery/ui/themes/jquery-ui.min.css, /3rd-party/font-awesome-font-icons/font-awesome-4.5.0/css/font-awesome.min.css, /3rd-party/angular-animate/ng-animation.css
+jawr.css.bundle.main.mappings=/3rd-party/bootstrap-3.3.7/css/bootstrap.min.css, /3rd-party/jquery/ui/themes/lightness.css, /net/geoprism/css/theme.css, /net/geoprism/css/main.css, /3rd-party/jquery/ui/themes/jquery-ui.min.css, /3rd-party/font-awesome-font-icons/font-awesome-5.11.2/css/all.css, /3rd-party/angular-animate/ng-animation.css
 
 jawr.css.bundle.dashboard.id=/bundles/dashboard.css
 jawr.css.bundle.dashboard.mappings=/net/geoprism/css/dashboard-viewer.css, /net/geoprism/css/charting.css, /net/geoprism/css/data-uploader.css, /net/geoprism/custom-fonts/uploader/fonts/custom-font-styles.css
