--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -85,6 +85,12 @@
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-parsers</artifactId>
 			<version>1.12</version>
+			<exclusions>
+			  <exclusion>
+			  	<artifactId>geoapi</artifactId>
+			  	<groupId>org.opengis</groupId>
+			  </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tika</groupId>
