--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -21,7 +21,7 @@
 		"@mapbox/mapbox-sdk": "^0.7.0",
 		"@types/file-saver": "^2.0.0",
 		"@types/geojson": "^7946.0.7",
-		"@types/mapbox-gl": "1.4.0",
+		"@types/mapbox-gl": "0.51.3",
 		"@types/proj4": "^2.5.0",
 		"angular-animations": "0.0.10",
 		"angular-tree-component": "^8.3.0",
@@ -29,7 +29,7 @@
 		"file-saver": "^2.0.0",
 		"fine-uploader": "^5.16.2",
 		"libphonenumber-js": "^1.7.18",
-		"mapbox-gl": "^1.4.1",
+		"mapbox-gl": "0.53.1",
 		"ng2-file-upload": "^1.3.0",
 		"ng2-password-strength-bar": "^1.2.3",
 		"ng2-validation": "^4.2.0",
