Added UASDM support for multispectral processing.

--- a/envcfg/envcfg-example.properties
+++ b/envcfg/envcfg-example.properties
@@ -1,5 +1,9 @@
 appcfg=osmre-dev
 
+# Any override properties specific to the current development environment go here (like database.port)
+#database.port=5442
+
+# UASDM flags that can help make development easier
 #dev.s3.uploadAllZip=false
 #dev.s3.uploadRaw=false
 #dev.runOrtho=false
