--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -7,40 +7,40 @@
 		"build": "rimraf dist && webpack --config config/webpack.prod.js --profile"
 	},
 	"dependencies": {
-		"@angular/animations": "~5.2.11",
-		"@angular/cdk": "^5.2.5",
-		"@angular/common": "~5.2.11",
-		"@angular/core": "~5.2.11",
-		"@angular/forms": "~5.2.11",
-		"@angular/http": "~5.2.11",
-		"@angular/platform-browser": "~5.2.11",
-		"@angular/platform-browser-dynamic": "~5.2.11",
-		"@angular/router": "~5.2.11",
-		"@mapbox/mapbox-gl-draw": "^1.1.1",
-		"@mapbox/mapbox-gl-draw-static-mode": "^1.0.1",
-		"@mapbox/mapbox-sdk": "^0.7.0",
-		"@types/file-saver": "^2.0.0",
-		"@types/geojson": "^7946.0.7",
+		"@angular/animations": "5.2.11",
+		"@angular/cdk": "5.2.5",
+		"@angular/common": "5.2.11",
+		"@angular/core": "5.2.11",
+		"@angular/forms": "5.2.11",
+		"@angular/http": "5.2.11",
+		"@angular/platform-browser": "5.2.11",
+		"@angular/platform-browser-dynamic": "5.2.11",
+		"@angular/router": "5.2.11",
+		"@mapbox/mapbox-gl-draw": "1.1.1",
+		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
+		"@mapbox/mapbox-sdk": "0.7.0",
+		"@types/file-saver": "2.0.0",
+		"@types/geojson": "7946.0.7",
 		"@types/mapbox-gl": "0.51.3",
-		"@types/proj4": "^2.5.0",
+		"@types/proj4": "2.5.0",
 		"angular-animations": "0.0.10",
-		"angular-tree-component": "^8.3.0",
-		"core-js": "^2.4.1",
-		"file-saver": "^2.0.0",
-		"fine-uploader": "^5.16.2",
-		"libphonenumber-js": "^1.7.18",
+		"angular-tree-component": "8.3.0",
+		"core-js": "2.4.1",
+		"file-saver": "2.0.0",
+		"fine-uploader": "5.16.2",
+		"libphonenumber-js": "1.7.18",
 		"mapbox-gl": "0.53.1",
-		"ng2-file-upload": "^1.3.0",
-		"ng2-password-strength-bar": "^1.2.3",
-		"ng2-validation": "^4.2.0",
-		"ngx-bootstrap": "^2.0.2",
-		"ngx-contextmenu": "^4.2.0",
-		"ngx-cookie-service": "^1.0.10",
-		"ngx-pagination": "^3.2.1",
-		"proj4": "^2.5.0",
+		"ng2-file-upload": "1.3.0",
+		"ng2-password-strength-bar": "1.2.3",
+		"ng2-validation": "4.2.0",
+		"ngx-bootstrap": "2.0.2",
+		"ngx-contextmenu": "4.2.0",
+		"ngx-cookie-service": "1.0.10",
+		"ngx-pagination": "3.2.1",
+		"proj4": "2.5.0",
 		"rxjs": "5.5.0",
-		"web-animations-js": "^2.3.1",
-		"zone.js": "^0.8.5"
+		"web-animations-js": "2.3.1",
+		"zone.js": "0.8.5"
 	},
 	"devDependencies": {
 		"@angular/compiler": "~5.2.11",
