--- a/envcfg/envcfg-example.properties
+++ b/envcfg/envcfg-example.properties
@@ -1,3 +1,4 @@
+# The application will use the properties files in the sibling directory with this name.
 appcfg=osmre-dev
 
 # Any override properties specific to the current development environment go here (like database.port)
