--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -7,62 +7,61 @@
 		"build": "rimraf dist && webpack --config config/webpack.prod.js --profile"
 	},
 	"dependencies": {
-		"@angular/animations": "5.2.11",
-		"@angular/cdk": "5.2.5",
-		"@angular/common": "5.2.11",
-		"@angular/core": "5.2.11",
-		"@angular/forms": "5.2.11",
-		"@angular/http": "5.2.11",
-		"@angular/platform-browser": "5.2.11",
-		"@angular/platform-browser-dynamic": "5.2.11",
-		"@angular/router": "5.2.11",
-		"@mapbox/mapbox-gl-draw": "1.1.1",
+		"@angular/animations": "9.1.0",
+		"@angular/cdk": "9.2.0",
+		"@angular/common": "9.1.0",
+		"@angular/core": "9.1.0",
+		"@angular/forms": "9.1.0",
+		"@angular/http": "7.2.16",
+		"@angular/platform-browser": "9.1.0",
+		"@angular/platform-browser-dynamic": "9.1.0",
+		"@angular/router": "9.1.0",
+		"@mapbox/mapbox-gl-draw": "1.1.2",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
-		"@mapbox/mapbox-sdk": "0.7.0",
-		"@types/file-saver": "2.0.0",
+		"@mapbox/mapbox-sdk": "0.9.0",
+		"@types/file-saver": "2.0.1",
 		"@types/geojson": "7946.0.7",
-		"@types/mapbox-gl": "0.51.3",
+		"@types/google-libphonenumber": "^7.4.17",
+		"@types/mapbox-gl": "1.8.1",
 		"@types/proj4": "2.5.0",
 		"angular-animations": "0.0.10",
-		"angular-tree-component": "8.3.0",
-		"core-js": "2.4.1",
-		"file-saver": "2.0.0",
+		"angular-tree-component": "8.5.6",
+		"core-js": "3.6.4",
+		"file-saver": "2.0.2",
 		"fine-uploader": "5.16.2",
-		"libphonenumber-js": "1.7.18",
-		"mapbox-gl": "0.53.1",
-		"ng2-file-upload": "1.3.0",
-		"ng2-password-strength-bar": "1.2.3",
-		"ng2-validation": "4.2.0",
-		"ngx-bootstrap": "2.0.2",
-		"ngx-contextmenu": "4.2.0",
-		"ngx-cookie-service": "1.0.10",
-		"ngx-pagination": "3.2.1",
-		"proj4": "2.5.0",
-		"rxjs": "5.5.0",
-		"web-animations-js": "2.3.1",
-		"zone.js": "0.8.5"
+		"google-libphonenumber": "^3.2.8",
+		"mapbox-gl": "1.9.0",
+		"ng2-file-upload": "1.4.0",
+		"ngx-bootstrap": "5.5.0",
+		"ngx-contextmenu": "5.4.0",
+		"ngx-cookie-service": "3.0.3",
+		"ngx-pagination": "5.0.0",
+		"proj4": "2.6.0",
+		"rxjs": "6.5.4",
+		"web-animations-js": "2.3.2",
+		"zone.js": "0.10.3"
 	},
 	"devDependencies": {
-		"@angular/compiler": "~5.2.11",
-		"@angular/compiler-cli": "~5.2.11",
-		"@ngtools/webpack": "^7.3.7",
-		"@types/jasmine": "2.5.36",
-		"@types/node": "^6.0.45",
-		"css-loader": "2.1.1",
-		"file-loader": "1.1.11",
-		"html-loader": "^0.5.5",
-		"html-webpack-plugin": "^4.0.0-beta.5",
-		"node-sass": "^4.9.4",
-		"null-loader": "^0.1.1",
-		"raw-loader": "^0.5.1",
-		"rimraf": "^2.5.2",
-		"sass-loader": "^7.1.0",
-		"style-loader": "^0.13.1",
-		"typescript": "^2.8.1",
-		"webpack": "^4.28.3",
-		"webpack-bundle-analyzer": "^3.1.0",
-		"webpack-cli": "3.2.0",
-		"webpack-dev-server": "^3.1.14",
-		"webpack-merge": "^3.0.0"
+		"@angular/compiler": "~9.1.0",
+		"@angular/compiler-cli": "~9.1.0",
+		"@ngtools/webpack": "^9.1.0",
+		"@types/jasmine": "3.5.10",
+		"@types/node": "^13.9.5",
+		"css-loader": "3.4.2",
+		"file-loader": "6.0.0",
+		"html-loader": "^1.0.0",
+		"html-webpack-plugin": "^4.0.2",
+		"node-sass": "4.13.1",
+		"null-loader": "^3.0.0",
+		"raw-loader": "^4.0.0",
+		"rimraf": "^3.0.2",
+		"sass-loader": "^8.0.2",
+		"style-loader": "^1.1.3",
+		"typescript": "^3.8.3",
+		"webpack": "^4.42.1",
+		"webpack-bundle-analyzer": "^3.6.1",
+		"webpack-cli": "3.3.11",
+		"webpack-dev-server": "^3.10.3",
+		"webpack-merge": "^4.2.2"
 	}
 }
