--- a/uasdm-web/src/main/ng2/tsconfig.json
+++ b/uasdm-web/src/main/ng2/tsconfig.json
@@ -1,20 +1,27 @@
 {
-	"compilerOptions": {
-		"target": "es5",
-		"module": "commonjs",
-		"moduleResolution": "node",
-		"sourceMap": true,
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
-		"lib": [
-			"es2015",
-			"dom"
-		],
-		"noImplicitAny": false,
-		"suppressImplicitAnyIndexErrors": true,
-		"skipLibCheck": true
-	},
-	"exclude": [
-		"node_modules/*"
-	]
+  "compileOnSave": false,
+  "compilerOptions": {
+    "sourceMap": true,
+    "declaration": false,
+    "downlevelIteration": true,
+    "experimentalDecorators": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "target": "es2015",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2018",
+      "dom"
+    ]
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
+  },
+  "exclude": [
+	"node_modules/*"
+  ]
 }
