--- a/uasdm-server/pom.xml
+++ b/uasdm-server/pom.xml
@@ -132,6 +132,16 @@
       <artifactId>zookeeper</artifactId>
       <version>3.4.14</version>
       <type>pom</type>
+      <exclusions>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
