Moved global css and assets into the node build system

--- a/uasdm-web/src/main/ng2/package.json
+++ b/uasdm-web/src/main/ng2/package.json
@@ -12,10 +12,10 @@
 		"@angular/common": "9.1.0",
 		"@angular/core": "9.1.0",
 		"@angular/forms": "9.1.0",
-		"@angular/http": "7.2.16",
 		"@angular/platform-browser": "9.1.0",
 		"@angular/platform-browser-dynamic": "9.1.0",
 		"@angular/router": "9.1.0",
+		"@fortawesome/fontawesome-free": "^5.13.0",
 		"@mapbox/mapbox-gl-draw": "1.1.2",
 		"@mapbox/mapbox-gl-draw-static-mode": "1.0.1",
 		"@mapbox/mapbox-sdk": "0.9.0",
@@ -26,6 +26,7 @@
 		"@types/proj4": "2.5.0",
 		"angular-animations": "0.0.10",
 		"angular-tree-component": "8.5.6",
+		"bootstrap": "^3.4.1",
 		"core-js": "3.6.4",
 		"file-saver": "2.0.2",
 		"fine-uploader": "5.16.2",
@@ -33,11 +34,12 @@
 		"mapbox-gl": "1.9.0",
 		"ng2-file-upload": "1.4.0",
 		"ngx-bootstrap": "5.5.0",
-		"ngx-contextmenu": "5.4.0",
 		"ngx-cookie-service": "3.0.3",
 		"ngx-pagination": "5.0.0",
+		"popper.js": "^1.16.1",
 		"proj4": "2.6.0",
 		"rxjs": "6.5.4",
+		"tslib": "^1.11.1",
 		"web-animations-js": "2.3.2",
 		"zone.js": "0.10.3"
 	},
