Fixed non-deterministic deployed jars
Based on version discrepancies between geoprism and usadm there would be
multiple versions of the same jar built into the uasdm lib directory in
the jar.  In order to prevent this all jars from the geoprism war
overlay must be excluded.

--- a/uasdm-server/src/main/resources/log4j2.properties
+++ b/uasdm-server/src/main/resources/log4j2.properties
@@ -2,17 +2,17 @@ status = error
 dest = err
 name = PropertiesConfig
  
-property.filename = ${project.basedir}/../logs/log.xml
+property.filename = ${project.basedir}/../logs/log.log
  
 filter.threshold.type = ThresholdFilter
-filter.threshold.level = info
+filter.threshold.level = debug
  
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %m%n
 appender.console.filter.threshold.type = ThresholdFilter
-appender.console.filter.threshold.level = info
+appender.console.filter.threshold.level = error
  
 appender.rolling.type = RollingFile
 appender.rolling.name = RollingFile
