Ability to publish and unpublish a product

--- a/envcfg/dev-deploy/uasdm/app.properties
+++ b/envcfg/dev-deploy/uasdm/app.properties
@@ -15,3 +15,5 @@ solr.url=http://localhost:8983/solr/uasdm
 odm.url=http://10.120.10.50:3001/
 
 deployment.type=osmre
+
+public.workspace=uasdm-public
