--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   </modules>
 
   <properties>
-    <geoprism.version>0.8.3</geoprism.version>
+    <geoprism.version>0.8.4-SNAPSHOT</geoprism.version>
   
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
