WMTS Service setup

--- a/envcfg/nps-dev/uasdm/app.properties
+++ b/envcfg/nps-dev/uasdm/app.properties
@@ -16,4 +16,4 @@ solr.url=http://localhost:8983/solr/uasdm
 odm.url=http://localhost:3000/
 
 deployment.type=nps
-public.workspace=uasdm-public
+public.workspace=image-public
