--- a/envcfg/nps-staging/uasdm/app.properties
+++ b/envcfg/nps-staging/uasdm/app.properties
@@ -16,4 +16,4 @@ solr.url=http://localhost:8983/solr/uasdm
 odm.url=http://10.0.1.89:3000/
 
 deployment.type=nps
-public.workspace=uasdm-public
+public.workspace=image-public
