--- a/envcfg/prod/uasdm/app.properties
+++ b/envcfg/prod/uasdm/app.properties
@@ -15,4 +15,4 @@ solr.url=http://localhost:8983/solr/uasdm
 odm.url=http://10.120.10.50:3000/
 
 deployment.type=osmre
-public.workspace=uasdm-public
+public.workspace=image-public
