Added license headers.

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,15 @@
 
     <geotools.version>16.1</geotools.version>    
   </properties>
+  
+  <licenses>
+    <license>
+      <name>
+        Apache License, Version 2.0
+      </name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+    </license>
+  </licenses>
 
   <dependencies>
     <dependency>
@@ -95,7 +104,77 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <inherited>true</inherited>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.11</version>
+        <configuration>
+          <header>${basedir}/LICENSE_HEADER</header>
+          <excludes>
+            <exclude>target/**</exclude>
+            <exclude>m2-target/**</exclude>
+            <exclude>**/*.properties</exclude>
+            <exclude>**/*.launch</exclude>
+            <exclude>**/*.vsd</exclude>
+            <exclude>**/*.gitignore</exclude>
+            <exclude>**/*.LESSER</exclude>
+            <exclude>**/*.xls</exclude>
+            <exclude>**/doc/**</exclude>
+            <exclude>**/launches/**</exclude>
+            <exclude>**/*.jar</exclude>
+            <exclude>LICENSE_HEADER</exclude>
+            <exclude>**/*.markdown</exclude>
+            <exclude>**/COPYING</exclude>
+            <exclude>**/logs/**</exclude>
+            <exclude>**/*.png</exclude>
+            <exclude>**/thirdparty/**</exclude>
+            <exclude>**/yui2/**</exclude>
+            <exclude>**/yui3/**</exclude>
+            <exclude>**/.git/**</exclude>
+            <exclude>**/ajcore*.txt</exclude>
+            <exclude>**/.directory</exclude>
+            <exclude>**/.keystore</exclude>
+            <exclude>**/.keyStore</exclude>
+            <exclude>**/*.yml</exclude>
+            <exclude>**/custom-fonts/**</exclude>
+            <exclude>**/node_modules/**</exclude>
+            <exclude>**/typings/**</exclude>
+            <exclude>**/ng2/**</exclude>
+            <exclude>**/webapp/dist/**</exclude>
+            <exclude>**/cldr/**</exclude>
+            <exclude>uasdm-clusterodm/ClusterODM/**</exclude>
+            <exclude>uasdm-micasense/imageprocessing/**</exclude>
+            <exclude>uasdm-micasense/micasense/**</exclude>
+            <exclude>uasdm-micasense/in/**</exclude>
+            <exclude>uasdm-micasense/out/**</exclude>
+            <exclude>uasdm-micasense/.pytest_cache/**</exclude>
+            <exclude>uasdm-odm/NodeODM/**</exclude>
+            <exclude>uasdm-odm/ODM/**</exclude>
+            <exclude>geoserver-data/**</exclude>
+            <exclude>src/solr/configsets/**</exclude>
+            <exclude>**/session/sessionCache/**</exclude>
 
+            <!-- 3rd party library mishmashes. When we upgrade tomcat we can remove these with webjars. -->
+            <exclude>**/webapp/3rd-party/**</exclude>
+          </excludes>
+          <properties>
+            <name>${project.name}</name>
+            <year>${project.inceptionYear}</year>
+            <holder>The Department of Interior</holder>
+            <contact>getinfo@osmre.gov</contact>
+          </properties>
+          <encoding>UTF-8</encoding>
+        </configuration>
+        <!-- <executions>
+          <execution>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions> -->
+      </plugin>
     </plugins>
     <pluginManagement>
     	<plugins>
