--- a/uasdm-clusterodm/aws-config-staging.json
+++ b/uasdm-clusterodm/aws-config-staging.json
@@ -1,8 +1,8 @@
 {
     "provider": "aws",
     
-    "accessKey": "AKIA575O47JSACXK6MRA",
-    "secretKey": "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",
+    "accessKey": "AKIA32XPOGK7WEK6SWGU",
+    "secretKey": "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",
     
     "securityGroup": "cluster-odm-node",
     
@@ -17,7 +17,7 @@
     
     "ami": "ami-07b4f3c02c7f83d59",
     
-    "instanceLimit": 5,
+    "instanceLimit": 15,
 
     "spot": true,
     "imageSizeMapping": [
