Added vpcId to cluster config files.

--- a/uasdm-clusterodm/aws-config-devdeploy.json
+++ b/uasdm-clusterodm/aws-config-devdeploy.json
@@ -6,6 +6,8 @@
     
     "securityGroup": "cluster-odm-node",
     
+    "vpcId" : "vpc-04624f4b9b033bc4c",
+    
     "log-level": "debug",
     "debug": true,
 
