Added createRetries to odm config for more robust autoscaling.

--- a/uasdm-clusterodm/aws-config-tftest.json
+++ b/uasdm-clusterodm/aws-config-tftest.json
@@ -10,6 +10,8 @@
     
     "log-level": "debug",
     "debug": true,
+    
+    "createRetries": 5,
 
     "monitoring": false,
     "maxRuntime": -1,
