--- a/uasdm-clusterodm/aws-config-devdeploy.json
+++ b/uasdm-clusterodm/aws-config-devdeploy.json
@@ -12,6 +12,8 @@
     
     "log-level": "debug",
     "debug": true,
+    
+    "createRetries": 5,
 
     "monitoring": false,
     "maxRuntime": -1,
