Fixed issue where ortho thumbnails were not rendering in collection viewer.

--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -4,7 +4,7 @@ chunk.expire.time=1
 # Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
 s3.accessKey=AKIAIUOLICSECPXGYTAA
 s3.secretKey=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
-bucket.name=osmre-uas-repo
+bucket.name=osmre-uas-dev
 bucket.region=US_EAST_1
 
 # url of the solr service
@@ -13,7 +13,7 @@ solr.enabled=true
 # url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
 
-odm.url=http://localhost:4000/
+odm.url=http://localhost:3000/
 
 deployment.type=osmre
 public.workspace=image-public
