Basic implementation of Eros sync.

--- a/envcfg/prod/uasdm/app.properties
+++ b/envcfg/prod/uasdm/app.properties
@@ -6,6 +6,10 @@ s3.secretKey=INAmfvwRcO8pUPCTeJAROpvzVGHMP1RsDnu58SL2
 bucket.name=osmre-uas-prod
 bucket.region=US_EAST_1
 
+# Programmatic ecs fargate run access
+ecs.accessKey=AKIA32XPOGK7S2QZHXFN
+ecs.secretKey=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
+
 # url of the solr service
 solr.enabled=true
 
