Error messages aren't parsed from some server errors correctly

--- a/uasdm-web/src/main/ng2/tsconfig.json
+++ b/uasdm-web/src/main/ng2/tsconfig.json
@@ -15,7 +15,22 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+		"@shared/*": [
+			"src/app/shared/*"
+		],
+		"@site/*": [
+			"src/app/site/*"
+		],
+		"@core/*": [
+			"src/app/core/*"
+		],
+		"@admin/*": [
+			"src/app/admin/*"
+		]
+	}
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
