A few more Eros bugfixes.

--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -24,9 +24,9 @@ eros.ecs.accessKey=AKIA32XPOGK7S2QZHXFN
 eros.ecs.secretKey=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
 
 eros.ecs.cluster=arn:aws:ecs:us-east-1:813324710591:cluster/uasdm-fargate-erossync
-eros.ecs.task=arn:aws:ecs:us-east-1:813324710591:task-definition/idm-fargate-erossync:1
+eros.ecs.task=arn:aws:ecs:us-east-1:813324710591:task-definition/idm-fargate-erossync:3
 eros.ecs.containerName=idm-fargate-erossync
-eros.ecs.subnets=
+eros.ecs.subnets=subnet-03c6b53d8dd94b4a7
 
 eros.ftp.serverUrl=52.13.165.218
 eros.ftp.username=richtest
