Removed sensitive information from build scripts and properties files.

--- a/envcfg/dev-deploy/geoprism/geoprism.properties
+++ b/envcfg/dev-deploy/geoprism/geoprism.properties
@@ -1,8 +1,8 @@
 email.to=
 email.from=noreply@geoprism.net
 email.server=email-smtp.us-west-2.amazonaws.com
-email.username=AKIAI67BF26B7JGFDB6Q
-email.password=change_me
+email.username=changeit
+email.password=changeit
 email.port=587
 email.encrypted=true
 
