--- a/envcfg/envcfg-example.properties
+++ b/envcfg/envcfg-example.properties
@@ -4,7 +4,19 @@ appcfg=osmre-dev
 # Any override properties specific to the current development environment go here (like database.port)
 #database.port=5442
 
-# UASDM flags that can help make development easier
+# Add Credentials Here
+#s3.accessKey=changeit
+#s3.secretKey=changeit
+#email.username=changeit
+#email.password=changeit
+#eros.ecs.accessKey=changeit
+#eros.ecs.secretKey=changeit
+#eros.ftp.serverUrl=changeit
+#eros.ftp.username=changeit
+#eros.ftp.password=changeit
+#eros.ftp.port=21
+
+# Skip flags that can help make development easier
 #dev.s3.uploadAllZip=false
 #dev.s3.uploadRaw=false
 #dev.runOrtho=false
