--- a/envcfg/nps-dev/geoprism/geoprism.properties
+++ b/envcfg/nps-dev/geoprism/geoprism.properties
@@ -1,8 +1,8 @@
 email.to=
 email.from=noreply@geoprism.net
 email.server=email-smtp.us-west-2.amazonaws.com
-email.username=AKIAJQYX6IY6SYJ2J5TQ
-email.password=BDfyfq56s7YASVmd2XWYk23ZmKcijxGqmDCO78zbBlfH
+email.username=changeit
+email.password=changeit
 email.port=587
 email.encrypted=true
 
