--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -2,8 +2,8 @@
 chunk.expire.time=1
 
 # Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
-s3.accessKey=AKIAIUOLICSECPXGYTAA
-s3.secretKey=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
+s3.accessKey=changeit
+s3.secretKey=changeit
 bucket.name=osmre-uas-dev
 bucket.region=US_EAST_1
 
@@ -16,22 +16,21 @@ solr.url=http://localhost:8983/solr/uasdm
 odm.url=http://localhost:3000/
 
 deployment.type=osmre
+
 public.workspace=image-public
 
-
 # Eros Synchronization related properties
-eros.ecs.accessKey=AKIA32XPOGK7S2QZHXFN
-eros.ecs.secretKey=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
+eros.ecs.accessKey=changeit
+eros.ecs.secretKey=changeit
 
 eros.ecs.cluster=arn:aws:ecs:us-east-1:813324710591:cluster/uasdm-fargate-erossync
 eros.ecs.task=arn:aws:ecs:us-east-1:813324710591:task-definition/idm-fargate-erossync:3
 eros.ecs.containerName=idm-fargate-erossync
-eros.ecs.subnets=subnet-03c6b53d8dd94b4a7
+eros.ecs.subnets=changeit
 
-eros.ftp.serverUrl=52.13.165.218
-eros.ftp.username=richtest
-eros.ftp.password=richtest5697
+eros.ftp.serverUrl=changeit
+eros.ftp.username=changeit
+eros.ftp.password=changeit
 eros.ftp.passive=true
-eros.ftp.port=39538
+eros.ftp.port=21
 eros.ftp.targetPath=eros/test
-
