--- a/envcfg/dev-deploy/uasdm/app.properties
+++ b/envcfg/dev-deploy/uasdm/app.properties
@@ -1,14 +1,11 @@
 # Number of days before a chunk expires, make sure this value is in sync with the fine uploader property defined in upload.component.ts
 chunk.expire.time=1
 
-s3.accessKey=AKIAIUOLICSECPXGYTAA
-s3.secretKey=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
+# Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
+s3.accessKey=changeit
+s3.secretKey=changeit
 bucket.name=osmre-uas-dev-deploy
 bucket.region=US_EAST_1
-
-# Programmatic ecs fargate run access
-ecs.accessKey=AKIA32XPOGK7S2QZHXFN
-ecs.secretKey=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
 
 # url of the solr service
 solr.enabled=true
@@ -21,3 +18,19 @@ odm.url=http://10.120.10.21:4001/
 deployment.type=osmre
 
 public.workspace=image-public
+
+# Eros Synchronization related properties
+eros.ecs.accessKey=changeit
+eros.ecs.secretKey=changeit
+
+eros.ecs.cluster=arn:aws:ecs:us-east-1:813324710591:cluster/uasdm-fargate-erossync
+eros.ecs.task=arn:aws:ecs:us-east-1:813324710591:task-definition/idm-fargate-erossync:3
+eros.ecs.containerName=idm-fargate-erossync
+eros.ecs.subnets=changeit
+
+eros.ftp.serverUrl=changeit
+eros.ftp.username=changeit
+eros.ftp.password=changeit
+eros.ftp.passive=true
+eros.ftp.port=21
+eros.ftp.targetPath=eros/test
