--- a/envcfg/nps-staging/uasdm/app.properties
+++ b/envcfg/nps-staging/uasdm/app.properties
@@ -2,8 +2,8 @@
 chunk.expire.time=1
 
 # Programmatic only S3 credentials for user  s3-osmre-uas-repo-access
-accessKey=AKIASX6YNNQV4G3YGK5I
-secretKey=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
+s3.accessKey=changeit
+s3.secretKey=changeit
 bucket.name=nps-geoprism-staging-bucket
 bucket.region=US_EAST_1
 
@@ -17,3 +17,19 @@ odm.url=http://10.0.1.89:4000/
 
 deployment.type=nps
 public.workspace=image-public
+
+# Eros Synchronization related properties
+eros.ecs.accessKey=changeit
+eros.ecs.secretKey=changeit
+
+eros.ecs.cluster=arn:aws:ecs:us-east-1:813324710591:cluster/uasdm-fargate-erossync
+eros.ecs.task=arn:aws:ecs:us-east-1:813324710591:task-definition/idm-fargate-erossync:3
+eros.ecs.containerName=idm-fargate-erossync
+eros.ecs.subnets=changeit
+
+eros.ftp.serverUrl=changeit
+eros.ftp.username=changeit
+eros.ftp.password=changeit
+eros.ftp.passive=true
+eros.ftp.port=21
+eros.ftp.targetPath=eros/test
