Removed mapbox token from repo.

--- a/envcfg/envcfg-example.properties
+++ b/envcfg/envcfg-example.properties
@@ -5,6 +5,7 @@ appcfg=osmre-dev
 #database.port=5442
 
 # Add Credentials Here
+#mapboxgl.accessToken=changeit
 #s3.accessKey=changeit
 #s3.secretKey=changeit
 #email.username=changeit
