Removed sensitive geoserver information.

--- a/envcfg/envcfg-example.properties
+++ b/envcfg/envcfg-example.properties
@@ -10,6 +10,8 @@ appcfg=osmre-dev
 #s3.secretKey=changeit
 #email.username=changeit
 #email.password=changeit
+#geoserver.admin.username=admin
+#geoserver.admin.password=changeit
 #eros.ecs.accessKey=changeit
 #eros.ecs.secretKey=changeit
 #eros.ftp.serverUrl=changeit
