Fix bug in example envcfg.

--- a/envcfg/envcfg-example.properties
+++ b/envcfg/envcfg-example.properties
@@ -10,7 +10,7 @@ appcfg=osmre-dev
 #s3.secretKey=changeit
 #email.username=changeit
 #email.password=changeit
-#geoserver.admin.username=admin
+#geoserver.admin.user=admin
 #geoserver.admin.password=changeit
 #eros.ecs.accessKey=changeit
 #eros.ecs.secretKey=changeit
