Support for CollectionStatus to improve the tasks page performance

--- a/envcfg/osmre-dev/uasdm/app.properties
+++ b/envcfg/osmre-dev/uasdm/app.properties
@@ -8,7 +8,7 @@ bucket.name=osmre-uas-dev
 bucket.region=US_EAST_1
 
 # url of the solr service
-solr.enabled=true
+solr.enabled=false
 
 # url of the solr service
 solr.url=http://localhost:8983/solr/uasdm
