Added keycloak config for dev server.

--- a/envcfg/dev-deploy/uasdm/app.properties
+++ b/envcfg/dev-deploy/uasdm/app.properties
@@ -7,6 +7,9 @@ s3.secretKey=changeit
 bucket.name=osmre-uas-dev-deploy
 bucket.region=US_EAST_1
 
+# Set to false if you want to not use keycloak
+keycloak.enabled=true
+
 # url of the solr service
 solr.enabled=true
 
